# operator

./: .gitignore  CLAUDE.md  README.md  SECURITY.md  SUPPORT.md  _redirects  brainchild  install.sh  operator  pyproject.toml  release-manifest.json  requirements.txt
.claude-plugin/: marketplace.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-aec3.yml  publish.yml
debug/: headless_meet_captions.py  headless_meet_invited.py  headless_meet_join.py  headless_meet_send.py
debug/14_18_pressure/: run_pressure_test.py
debug/14_18_pressure/fixtures/: extreme.jsonl  heavy.jsonl  realistic.jsonl
debug/14_18_pressure/outputs/: claude__extreme.json  claude__heavy.json  claude__realistic.json  codex__extreme.json  codex__heavy.json  codex__realistic.json  summary.json
debug/14_20_audio_spike/: mic_pipeline_30s.py  no_disclaim_smoke.py
debug/14_21_mic_capture_spike/: spike_mic_via_sckit.swift
debug/14_22_pty_spike/: DECISION.md  README.md  analyze_pyte.py  check_ready_payload.py  check_stuck_boot.py  instrument_boot.py  integration_pass.py  out_finalize_results.json  out_longmsg_results.json  out_resume_result.json  simulate_boot_scenarios.py  spike_crosscwd.py  spike_finalize.py  spike_framing.py  spike_longmsg.py  spike_pty.py  spike_resume.py  spike_sendkeys.py  spike_stopblock.py  test22_foreign_hook.py
debug/14_22_pty_spike/bench/: hook_event.sh  hook_pretool.sh  hook_stop.sh
debug/14_22_pty_spike/out_framing_with/: turns.json
debug/14_22_pty_spike/out_framing_without/: turns.json
debug/14_22_pty_spike/out_sendkeys/: timings.json
debug/14_22_pty_spike/out_stopblock/: timings.json
debug/14_22_pty_spike/out_tool/: clean_text.txt  pyte_full.txt  pyte_screen.txt  raw_bytes.hex  summary.txt
debug/14_24_permreq_spike/: DECISION.md  PHASE_5_LIVE_TEST_CHECKLIST.md  README.md  out_permreq_results.json  spike_permreq.py  test_phase0_hook_audit.py  test_phase1_permreq_hook.py
debug/14_24_permreq_spike/bench/: hook_permreq.sh  hook_pretool.sh  hook_stop.sh
debug/14_25_permreq_v2_spike/: out_permreq_v2_results.json  spike_permreq_v2.py
debug/14_25_permreq_v2_spike/bench/: hook_permreq.sh  hook_pretool.sh  hook_stop.sh
debug/14_26_classifier_spike/: out_classifier_results.json  spike_classifier.py
debug/14_26_classifier_spike/bench/: hook_stop.sh
debug/14_27_ask_user_question_spike/: FINDINGS.md  README.md  spike.py
debug/14_28_cpu_whisper_spike/: FINDINGS.md  bench_beam_size.py  bench_cpu.py
debug/14_29_speaker_attribution_spike/: FINDINGS.md  simulate.py
debug/14_30_cdp_reattach_spike/: spike.py  spike_zero_contexts.py
debug/14_31_tcc_warmup_spike/: DECISION.md  PLAN.md  RESULTS.md  responsible.py  results.json  spike.py
debug/14_32_shutdown_drain_spike/: spike1_drain_time.py  spike2_jsonl_concurrent_append.py  spike3_detached_child.py  spike4_worker_e2e.py  spike5_attach_adapter_integration.py
debug/14_33_spawn_failure_spike/: drive.py
debug/14_34_audio_replay/: boundary_attribution.py  explore_levers.py  full_meeting_wer.py  load_corpus.py  make_label_kit.py  merge_captions.py  model_bench.py  offset_sweep.py  oopif_frame_evaluate_spike.py  score_against_labels.py  word_level_attribution.py
debug/14_36_tcc_warmup_timing_spike/: FINDINGS.md  spike.py  verify_fix.py
debug/14_37_aec_tune/: FINDINGS.md  transcribe_validate.py
debug/codex_spike/: PHASE_0_FINDINGS.md  SPIKE.md  codex_mcp_probe.jsonl  codex_mcp_tools_list.json  probe1_exec_readfile.stdout  probe2_exec_writeblock.stdout  probe2b_exec_onrequest.stdout  probe3_mcp_elicitation.py  probe_amendment.py  probe_taxonomy.py  probe_taxonomy.summary.md
debug/permission_mcp_spike/: SPIKE_14_19_8_PERMISSION_VOICE.md  SPIKE_PER_TURN_VS_PER_MEETING.md  cli_probe_01_hook_ipc.py  cli_probe_02_subagent.py  cli_probe_09_ask.py  cli_probe_10_pre_tool_voice.py  probe10_t1_stream.jsonl  probe10_t2_stream.jsonl  probe10_t3_stream.jsonl  probe9_stream.jsonl
docs/: agent-context.md  apple-dev-setup.md  claude-use-cases.md  code-quality-audit-session-178.md  codex-agent-implementation-plan.md  deferred-live-tests.md  dom-inventory-meet.md  dom-inventory-zoom.md  e2e-qa-checklist.md  handoff.md  launch-audit-findings-a3-a5.md  launch-audit-findings-recovered.md  launch-audit-findings.md  launch-audit-plan.md  live-skill-tests.md  mcp-pressure-test.md  mvp-bar.md  permission-mcp-spike.md  pre-launch-audit.md  promo-video-script.md  qa-monday.md  release-runbook.md  roadmap.md  scratchpad.md  security.md  test-plan.md
pypi-stub/: README.md  pyproject.toml
pypi-stub/src/operator_redirect/: __init__.py
scripts/: auth_export.py  build_aec3_universal.sh  build_signed_helper.sh  check_auth.py  setup_labels.sh  test_chat_io.py
src/_1_800_operator/: __main__.py  config.py  custom_template.yaml
src/_1_800_operator/agents/: README.md
src/_1_800_operator/bridges/: claude.py
src/_1_800_operator/connectors/: __init__.py  attach_adapter.py  base.py  cdp_ws.py  session.py  (+4 more)
src/brainchild/: __main__.py  config.py
tests/: _helper_smoke_12s.py  probe_auth_errors.py  test_1571_error_classification.py  test_1573_oauth_cache_check.py  test_15745_preflight.py  test_1574_readiness.py  test_911_size_management.py  test_912_tool_timeout.py  test_913_tool_history_collapse.py  test_915_reconnection.py  test_916_disabled_mcp_error.py  test_917_skill_mcp_required.py  test_918_wizard_mcp_lock.py  test_aec_cleaner.py  test_anthropic_provider.py  test_attach_audio_wiring.py  test_audio_processor.py  test_branded_browser.py  test_bundled_mcps_bootable_static.py  test_caption_late_bind.py  test_cdp_user_data_dir.py  test_cdp_ws.py  test_chat_hardening.py  test_chat_runner_gaps.py  test_claude_cli_provider.py  test_claude_code_import.py  test_claude_mcp_sync.py  test_codex_agent_config.py  test_codex_elicitation_handler.py  test_codex_import.py  test_codex_mcp_provider.py  test_config_loader.py  test_config_validation.py  test_confirmation.py  test_connectors.py  test_continuation_window.py  test_doctor.py  test_entry_cli.py  test_face.py  test_gchat_grouped_sender.py  (+39 more)
(+101 files in other folders)
