[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "1-800-operator"
dynamic = ["version"]
description = "Chat-based AI meeting participant for Google Meet — joins, reads chat, replies via an LLM with MCP tool access."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "jojo", email = "shapirojojo@gmail.com" }]
keywords = ["meeting", "google-meet", "llm", "agent", "mcp", "chat"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
]

dependencies = [
    # Pinned for reproducible installs (mirrors requirements.txt).
    "python-dotenv==1.2.2",
    "openai==2.29.0",
    "anthropic==0.94.0",
    "playwright==1.58.0",
    "mcp==1.27.0",
    "ruamel.yaml>=0.18.0",
    "pyyaml==6.0.3",
    "rich==14.3.3",
    "readchar==4.2.2",
    # Security floors for transitive deps (pip-audit, session 138) — left as
    # `>=` so future CVE patches land on `pip install -U` without edits here.
    "cryptography>=46.0.7",    # via mcp → pyjwt[crypto]
    "pygments>=2.20.0",        # via rich
    "python-multipart>=0.0.26", # via mcp
]

[project.scripts]
operator = "_1_800_operator.__main__:main"

[project.urls]
Homepage = "https://github.com/1-800-operator/operator"
Repository = "https://github.com/1-800-operator/operator"

[tool.hatch.version]
path = "src/_1_800_operator/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/_1_800_operator"]
# Hatchling's default already bundles non-.py files that live inside the
# declared package dir, so agents/**/*.{yaml,md,txt,env.example} ship
# automatically. `force-include` was tried and caused duplicate zip entries.
# Verify after any future build-backend change: `python -m zipfile -l
# dist/1_800_operator-*.whl | grep agents/` must list pm, engineer, designer.

[tool.hatch.build.targets.sdist]
include = [
    "src/_1_800_operator",
    "README.md",
    "LICENSE",
    "SECURITY.md",
    "requirements.txt",
    "pyproject.toml",
]
