[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "1-800-operator"
dynamic = ["version"]
description = "Chat-based AI meeting participant for Google Meet — joins, reads chat, replies via an LLM with MCP tool access."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "jojo", email = "shapirojojo@gmail.com" }]
keywords = ["meeting", "google-meet", "llm", "agent", "mcp", "chat"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
]

dependencies = [
    # Pinned for reproducible installs (mirrors requirements.txt).
    # Operator does not consume any LLM API keys directly — the inner
    # model subprocess is `claude -p`, which uses the user's Claude
    # Max OAuth credential (no openai/anthropic Python SDKs needed).
    # The openai==2.29.0 and anthropic==0.94.0 deps were dropped in
    # session 205 after the "second LLM provider in v1?" product call
    # resolved to "no". If we ever revisit a multi-provider design,
    # the deps come back at the same time the pluggable provider
    # interface does.
    "python-dotenv==1.2.2",
    "playwright==1.58.0",
    "mcp==1.27.0",
    "pyyaml==6.0.3",
    "rich==14.3.3",
    # Audio pipeline (Phase 14.20.4, S233 backend swap) — slip mode's local
    # STT path. CTranslate2-based; runs CPU-only with no Metal/MLX dependency.
    # S233 swapped from mlx-whisper after two production crashes from MLX's
    # async Metal command-buffer abort path; see HWK S227 + S233 in
    # docs/agent-context.md and the bench in debug/14_28_cpu_whisper_spike/.
    "faster-whisper==1.2.1",
    "numpy==2.4.3",
    # Security floors for transitive deps (pip-audit, session 138) — left as
    # `>=` so future CVE patches land on `pip install -U` without edits here.
    "cryptography>=46.0.7",    # via mcp → pyjwt[crypto]
    "pygments>=2.20.0",        # via rich
    "python-multipart>=0.0.26", # via mcp
]

[project.scripts]
operator = "_1_800_operator.__main__:main"

[project.urls]
Homepage = "https://github.com/1-800-operator/operator"
Repository = "https://github.com/1-800-operator/operator"

[tool.hatch.version]
path = "src/_1_800_operator/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/_1_800_operator"]
exclude = [
    # Cargo build artifacts for the aec3 cleaner — multi-hundred-MB
    # per-architecture; install.sh runs `cargo build --release` from
    # the shipped source at install time.
    "src/_1_800_operator/rust/aec3/target",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/_1_800_operator",
    "README.md",
    "LICENSE",
    "SECURITY.md",
    "requirements.txt",
    "pyproject.toml",
]
exclude = [
    "src/_1_800_operator/rust/aec3/target",
]
