[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "1-800-operator"
version = "0.0.1"
description = "Placeholder. operator is not pip-installable — install via curl from https://1-800-operator.com"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "operator" }]
keywords = ["operator", "ai", "meetings", "google-meet"]
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://1-800-operator.com"

[project.scripts]
operator = "operator_redirect:main"

[tool.hatch.build.targets.wheel]
packages = ["src/operator_redirect"]
